--- a/blog/templates/blog/blog_index_page.html
+++ b/blog/templates/blog/blog_index_page.html
@@ -28,15 +28,23 @@
     {% with post=post.specific %}
 
         <section class="hero">
-            <div class="hero-body ">
+            <div class="hero-body pb-1">
                 <div class="container">
 
                     <div class="columns">
-                        <div class="column is-8 ">
+                        <div class="column is-10 ">
                             <div class="content is-medium">
-                                <h3 class="subtitle is-6">May 25, 2023</h3>
-                                <h2 class="title"><a href="{% pageurl post %}">{{ post.title }}</a></h2>
-                                <p>{{ post.body|richtext }}</p>
+                                <h3 class="subtitle is-6">{{ post.date }}</h3>
+                                <h2 class="title is-2"><a href="{% pageurl post %}">{{ post.title }}</a></h2>
+                                {{ post.contents }}
+                                {% comment %} {% for block in post.contents %}
+                                    {% with block_type=block.block_type %}
+                                        {% if block.block_type == 'embed' %}
+                                            <p class="is-5">{{ block.value }}</p>
+                                        {% else %}
+                                        {% endif %}
+                                    {% endwith %}                
+                                {% endfor %} {% endcomment %}
                             </div>
                         </div>
                     </div>
