--- a/research/templates/research/research_page.html
+++ b/research/templates/research/research_page.html
@@ -15,6 +15,8 @@
                 <div class="column is-10 is-offset-1">
                     <h1 class="title">{{ page.title }}</h1>
                     <p class="meta">{{ page.date }}</p>
+                <p></p>
+                    <p class="subtitle is-4">Abstract</p>
                     <div class="">{{ page.abstract }}</div>
                 </div>
             </div>
@@ -48,6 +50,12 @@
                                     <h2 class="subtitle">{{ block.value }}</h2>
                                 {% elif block.block_type == 'paragraph' %}
                                     <p class="is-5">{{ block.value|richtext  }}</p>
+                                {% elif block.block_type == 'list' %}
+                                <ul>
+                                    {% for item in block.value  %}
+                                        <li>{{item}}</li>
+                                    {% endfor %}
+                                </ul>
                                 {% else %}
                                     <section class="block-{{ block.block_type }}">
                                         {% include_block block %}
